The Samba-Bugzilla – Bug 11659
lastLogon and lastLogonTimestamp are not updated
Last modified: 2016-01-07 17:37:52 UTC
LastLogon and lastLogonTimestamp are not updated
Created attachment 11754 [details] Patch from master with cherry-pick information (for v4-3-test)
Pushed to autobuild-v4-3-test.
(In reply to Karolin Seeger from comment #2) Pushed to v4-3-test. Closing out bug report. Thanks!